--- a/terminos-servicio.html
+++ b/terminos-servicio.html
@@ -7,7 +7,9 @@
         <title>Términos de Servicio | Montajes y Mantenimientos Vásquez</title>
         
         <!-- Favicon -->
-        <link rel="icon" type="image/png" href="assets/logo.png">
+        <link rel="icon" type="image/x-icon" href="favicon.ico?v=20251002">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/logo.png?v=20251002">
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/logo.png?v=20251002">
 
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,8 +17,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css?v=2024092204" rel="stylesheet" />
+        <!-- Bootstrap CSS from CDN (rápido y optimizado) -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <!-- Estilos personalizados (ligero y optimizado) -->
+        <link href="css/custom-styles.css?v=20251002b" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column h-100 bg-light">
         <main class="flex-shrink-0">
